# dictum

./: .gitignore  README.md
dictum/: package-lock.json  pyproject.toml
dictum/dictum/: __init__.py  cli.py  client.py  project.py  query.py  utils.py
dictum/dictum/backends/: __init__.py  base.py  pandas.py  postgres.py  profiles.py  sql_alchemy.py  sqlite.py
dictum/dictum/backends/mixins/: arithmetic.py
dictum/dictum/cli/: __init__.py
dictum/dictum/cli/project_template/: __init__.py  profiles.yml  project.yml
dictum/dictum/data_model/: __init__.py  calculations.py  computation.py  data_model.py  dicts.py  table.py  transforms.py  utils.py
dictum/dictum/data_model/expr/: __init__.py  expr.lark  parser.py
dictum/dictum/data_model/transforms/: base.py  dimension.py  scalar.py  table.py
dictum/dictum/engine/: __init__.py  aggregate_query_builder.py  computation.py  engine.py  metrics.py  operators.py  result.py
dictum/dictum/examples/chinook/: chinook.yml  generate.py  profiles.yml  project.yml  unions.yml
dictum/dictum/examples/chinook/tables/: albums.yml  artists.yml  customers.yml  employees.yml  genres.yml  invoice_items.yml  invoices.yml  media_types.yml  rock.yml  (+1 more)
dictum/dictum/examples/tutorial/: generate.py  generate_snippets.py  profiles.yml  project.yml
dictum/dictum/model/: __init__.py  calculations.py  dicts.py  model.py  scalar.py  table.py  time.py  utils.py
dictum/dictum/model/expr/: __init__.py  introspection.py  parser.py
dictum/dictum/model/transforms/: scalar.py  table.py
dictum/dictum/project/: __init__.py  analyses.py  calculations.py  calculations.pyi  chart.py  dimension.py  dimensions.py  formatting.py  magics.py  metrics.py  project.py
dictum/dictum/project/altair/: __init__.py  data.py  encoding.py  format.py  locale.py  mixins.py  monkeypatch.py
dictum/dictum/project/templates/: __init__.py  calculation.html.j2  calculations.html.j2  macros.html.j2  project.html.j2
dictum/dictum/ql/: __init__.py  parser.py  ql.lark  transformer.py
dictum/dictum/schema/: __init__.py  id.py  project.py  query.py  utils.py
dictum/dictum/schema/data_model/: calculations.py  data_model.py  format.py  table.py  transform.py  transforms.yml  type.py
dictum/dictum/schema/model/: __init__.py  calculations.py  format.py  model.py  table.py  transform.py  type.py
dictum/dictum/server/: __init__.py  app.py  proxy.py  resolvers.py  schema.py
dictum/dictum/server/static/: index.html
dictum/dictum/store/: __init__.py  calculations.py  computation.py  dicts.py  store.py  table.py  transforms.py
dictum/dictum/store/expr/: __init__.py  expr.lark  parser.py
dictum/dictum/store/schema/: __init__.py  builtins.yml  config.py  query.py
dictum/dictum/tests/: conftest.py  test_backend.py  test_backend_base.py  test_cli.py  test_dictum.py  test_nestor.py  test_project.py  test_ql.py
dictum/dictum/tests/test_data_model/: test_builtins.py  test_calculations.py  test_computation.py  test_data_model.py  test_expr.py  test_scalar_transforms.py  test_table.py  test_table_transforms.py  test_transforms.py
dictum/dictum/tests/test_end_to_end/: conftest.py  test_altair.py  test_ql.py  test_select.py
dictum/dictum/tests/test_engine/: test_engine.py  test_operators.py
dictum/dictum/tests/test_model/: _test_computation.py  test_builtins.py  test_calculations.py  test_expr.py  test_model.py  test_scalar_transforms.py  test_table.py  test_table_transforms.py
dictum/dictum/tests/test_project/: conftest.py  test_altair.py  test_pivot.py  test_project.py  test_select.py
dictum/dictum/tests/test_schema/: test_data_model.py  test_id.py  test_query.py
dictum/dictum/tests/test_store/: test_builtins.py  test_calculations.py  test_computation.py  test_expr.py  test_store.py  test_table.py
dictum/dictum/transforms/: base.py  scalar.py  table.py
dictum/tests/: test_dictum.py
nestor/: package-lock.json  pyproject.toml
nestor/nestor/: __init__.py  cli.py
nestor/nestor/backends/: __init__.py  arithmetic.py  base.py  pandas.py  postgres.py  profiles.py  sql_alchemy.py  sqlite.py
nestor/nestor/backends/mixins/: datediff.py
nestor/nestor/examples/chinook/: chinook.postgres.sql  chinook.yml  profiles.yml
nestor/nestor/ql/: __init__.py  parser.py  ql.lark  transformer.py
nestor/nestor/server/: __init__.py  app.py  proxy.py  resolvers.py  schema.graphql  schema.py
nestor/nestor/server/static/: bundle.css  bundle.js  bundle.js.map  index.html
nestor/nestor/store/: __init__.py  calculations.py  computation.py  formatting.py  store.py  table.py  transforms.py
nestor/nestor/store/expr/: __init__.py  expr.lark  parser.py
nestor/nestor/store/schema/: __init__.py  builtins.yml  config.py  metadata.py  query.py  types.py
nestor/nestor/tests/: conftest.py  test_api.py  test_backend.py  test_backend_base.py  test_ql.py
nestor/nestor/tests/test_store/: test_calculations.py  test_computation.py  test_expr.py  test_store.py  test_table.py
nestor/tests/: conftest.py  test_nestor.py
nestor/tests/test_backends/: test_sql_alchemy.py
nestor/tests/test_store/: conftest.py  test_expr.py  test_store.py
nestor/tests/test_store/configs/: chinook.yml  full_correct.yml
nestor/tests/test_store/test_schema/: config_test.yml  test_config.py
(+220 files in other folders)
