[tool.poetry]
name = "dictum"
version = "0.1.2"
description = "Describe business metrics with YAML, query and visualize in Jupyter with zero SQL"
authors = ["Mikhail Akimov <rovinj.akimov@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
dictum-core = "^0.1"
dictum-backend-postgres = {version = "^0.1", optional = true}
dictum-backend-vertica = {version = "^0.1", optional = true}

[tool.poetry.extras]
postgres = ["dictum-backend-postgres"]
vertica = ["dictum-backend-vertica"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
jupyter = "^1.0.0"
mkdocs-material = "^8.3.9"
mkdocs-jupyter = "^0.21.0"
black = "^22.6.0"
flake8 = "^5.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
